# SatisfactoryCalculator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  pyproject.toml
src/SatisfactoryCalculator/: __init__.py  __main__.py  recipes.py
src/SatisfactoryCalculator/ui/: __init__.py  app.py  detail_panel.py  flow_canvas.py  presenters.py  styles.py
src/SatisfactoryCalculator/webapp/: __init__.py  api.py  app_script.py  browser_view.py  index_html.py  planner.py  planner_view.py  server.py  static_assets.py  styles.py  workflow_store.py
src/SatisfactoryCalculator/webapp/static/: index.html
src/SatisfactoryCalculator/webapp/static/css/: base.css  browser.css  planner-canvas.css  planner-nodes.css  planner-shell.css  planner.css
src/SatisfactoryCalculator/webapp/static/js/: app.js  dom.js
src/SatisfactoryCalculator/webapp/static/js/api/: client.js
src/SatisfactoryCalculator/webapp/static/js/browser/: controller.js
src/SatisfactoryCalculator/webapp/static/js/common/: catalog.js  constants.js  format.js
src/SatisfactoryCalculator/webapp/static/js/planner/: computation.js  controller.js  controls.js  geometry.js  interactions.js  render-edges.js  render-nodes.js  render-panels.js  state.js  viewport.js  workflows.js
tests/: test_planner.py  test_recipes.py  test_web_api.py  test_web_server.py  test_workflow_store.py
